:bug: Fix Firefox background gradient visibility

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -28,10 +28,6 @@ html, body {
   min-height: 100%;
 }
 
-html {
-  position: absolute;
-}
-
 body {
   background: $color-bg;
   background: $color-bg-gradient no-repeat;
